# FileManagerDaz

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_GUIDE.md  cleanup_library.ps1  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHECKPOINT.md  CONFIGURATION.md  DETECTION_TEST.md  IMPLEMENTATION_SUMMARY.md  RESILIENCE.md
docs/screenshots/: .gitkeep
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: archive.rs  bundles.rs  collections.rs  downloader.rs  import_tasks.rs  maintenance.rs  mod.rs  products.rs  settings.rs  system.rs  watcher.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/core/: analyzer.rs  auto_import.rs  catalog.rs  destination.rs  duf_parser.rs  maintenance.rs  manifest.rs  mod.rs  orphan_scanner.rs  scene_analyzer.rs  thumbnails.rs  trash.rs  watcher.rs
src-tauri/src/core/downloader/: gdrive.rs  http.rs  mediafire.rs  mod.rs
src-tauri/src/core/extractor/: anchors.rs  batch.rs  checkpoint.rs  mod.rs  move_log.rs  multipart.rs  normalize.rs  rar.rs  recursive.rs  resilience.rs  seven_zip.rs  timing.rs  utils.rs  zip.rs
src-tauri/src/db/: bundles.rs  import_tasks.rs  mod.rs  models.rs  product_files.rs  repository.rs
src/lib/api/: checkpoint.ts  commands.ts  import-tasks.ts  updater.svelte.ts  updater.ts
src/lib/commands/: palette.ts
src/lib/components/: CloseDialog.svelte  CommandPalette.svelte  DestinationDialog.svelte  Downloads.svelte  DropZone.svelte  Maintenance.svelte  NormalizeFolder.svelte  ProductsList.svelte  Settings.svelte  Status.svelte  Toast.svelte
src/lib/components/layout/: StatusBar.svelte  TaskLogger.svelte
src/lib/components/products/: BatchTagEditor.svelte  CollectionDialog.svelte  LibraryStats.svelte  ProductCard.svelte  ProductEditDialog.svelte  UninstallDialog.svelte  utils.ts
src/lib/components/tools/: DuplicateDetector.svelte  SceneAnalyzer.svelte  ToolsPanel.svelte
src/lib/components/ui/: CustomSelect.svelte
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.ts  fr.ts
src/lib/stores/: imports.ts  notifications.ts  tasklog.svelte.ts  tasks.svelte.ts  theme.svelte.ts  toast.svelte.ts
src/routes/: +layout.ts  +page.svelte
src/routes/debug/checkpoint/: +page.svelte
