[package]
name = "file-manager-daz"
version = "1.3.0"
edition = "2021"
description = "DAZ 3D Content Manager"
authors = ["Yanis"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = ">=2.10", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-updater = ">=2.10"
tauri-plugin-process = ">=2.3"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "2"
sevenz-rust = "0.6"
walkdir = "2"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
once_cell = "1"
fs_extra = "1"
which = "6"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
blake3 = "1"
trash = "5"
quick-xml = "0.31"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
scraper = "0.22"
regex = "1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
